# once-human

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
once_human/: config.py  database.py  database_old.py  models.py
once_human/bot/: checks.py  main.py  utils.py
once_human/bot/cogs/: admin.py  base.py  specialization.py
once_human/bot/ui/: button.py  embed.py  modal.py  select.py  view.py
once_human/bot/ui/views/: base.py  message_box.py  player_specialization.py  user.py
