[project]
name = "once-human"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "discord-py>=2.4.0",
    "pip>=24.2",
    "psycopg2>=2.9.10",
    "shillelagh[gsheetsapi]>=1.2.28",
    "sqlalchemy>=2.0",
]

[tool.uv]
dev-dependencies = [
    "pre-commit>=3.8.0",
    "ruff>=0.6.5",
]
