[project]
name = "once-human"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "discord-py>=2.4.0",
    "fastapi>=0.115.3",
    "pip>=24.2",
    "shillelagh[gsheetsapi]>=1.2.28",
    "sqlalchemy[asyncio]>=2.0",
]

[tool.uv]
dev-dependencies = [
    "pre-commit>=3.8.0",
    "ruff>=0.6.5",
]
