[project]
name = "once-human"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "discord-py>=2.4.0",
    "sqlalchemy[asyncio]>=2.0",
]

[tool.uv]
dev-dependencies = [
    "pre-commit>=4.0.1",
    "ruff>=0.7.3",
]

[tool.ruff]
line-length = 120
